[gd_scene load_steps=7 format=3 uid="uid://v0k4wvdk3cpg"]

[ext_resource type="Script" path="res://chat/chat.gd" id="1_engbf"]
[ext_resource type="PackedScene" uid="uid://7u5tp0a0pyk2" path="res://dialogs/dialogs.tscn" id="1_exmix"]
[ext_resource type="PackedScene" uid="uid://dclb550ddq3p5" path="res://choose_sentence/choose_sentence.tscn" id="2_2udvc"]
[ext_resource type="LabelSettings" uid="uid://e0rvn5ayd8ia" path="res://chat_bubble/new_label_settings.tres" id="4_xjum4"]
[ext_resource type="Texture2D" uid="uid://b1h72wdx435n3" path="res://icon.svg" id="5_a2v0q"]

[sub_resource type="Theme" id="Theme_4bjhw"]
Button/font_sizes/font_size = 36

[node name="chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_engbf")

[node name="dialog_background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="choice_background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 2
offset_top = 768.0
offset_right = 540.0
offset_bottom = 961.0
color = Color(0.12549, 0.698039, 0.666667, 1)

[node name="header_background" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_right = 540.0
offset_bottom = 104.0
color = Color(0.12549, 0.698039, 0.666667, 1)

[node name="dialogs" parent="." instance=ExtResource("1_exmix")]
layout_mode = 1
offset_top = 628.0
offset_bottom = 768.0

[node name="choose_sentence" parent="." instance=ExtResource("2_2udvc")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 19.0
offset_top = 785.0
offset_right = 519.0
offset_bottom = 943.0
grow_horizontal = 1
grow_vertical = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(270, 480)

[node name="header" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_right = 540.0
offset_bottom = 104.0
label_settings = ExtResource("4_xjum4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_right = 104.0
offset_bottom = 104.0
theme = SubResource("Theme_4bjhw")
text = "‚Üê"
flat = true

[node name="timer" type="Timer" parent="."]
one_shot = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_top = 104.0
offset_right = 540.0
offset_bottom = 117.0
value = 25.0
nine_patch_stretch = true
texture_under = ExtResource("5_a2v0q")
texture_progress = ExtResource("5_a2v0q")
tint_over = Color(1, 0, 1, 1)
tint_progress = Color(1, 0, 0, 1)

[connection signal="new_message" from="dialogs" to="." method="_on_dialogs_new_message"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
